@@ -2,7 +2,8 @@
 2010-05-10   0.3.5-numpy:
 -------------------------
 Pearu Peterson added numpy support: constructing bitarray from numpy
-ndarray object, added bitarray methods .toarray() and .toword(index=0,bits=8).
+ndarray object, added bitarray methods .toarray(), .toword(index=0,bits=8),
+and .fromword(word, bits=8).
 
 2009-04-06   0.3.5:
 -------------------
